--- a/book.html
+++ b/book.html
@@ -37,10 +37,10 @@
                 </div>
                 <div class="col-md-12 text-center">
                     <div class="row cursive-font" style="color: rgb(250, 250, 255); font-weight:bold;">
-                        <div class="col-md-4 col-sm-6">TRANG CHỦ</div>
-                        <div class="col-md-1 col-sm-6">TÁC GIẢ</div>
-                        <div class="col-md-4 col-sm-6">GIỚI THIỆU</div>
-                        <div class="col-md-1 col-sm-6">TIN TỨC</div>
+                        <div class="col-md-4 col-sm-6" style="cursor: pointer">TRANG CHỦ</div>
+                        <div class="col-md-1 col-sm-6" style="cursor: pointer">TÁC GIẢ</div>
+                        <div class="col-md-4 col-sm-6" style="cursor: pointer">GIỚI THIỆU</div>
+                        <div class="col-md-1 col-sm-6" style="cursor: pointer">TIN TỨC</div>
                     </div>
                 </div>
             </div>
