add effect and image

--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header id="fh5co-header" class="animate-box">
+    <header id="fh5co-header" class="animate-box" style="background-image: url(images/header-background.jpg);">
         <div class="overlay"></div>
         <div class="container">
             <div class="row" style="margin-top: 50px">
@@ -47,10 +47,14 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 ">
                     <div class="intro">
-                        <h1 style="color: white;" class="cursive-font animate-box">Đôi nét về Hà Nội Xưa
+                        <h1 style="color: #ff9700;" class="cursive-font animate-box">Đôi nét về Hà Nội Xưa
                         </h1>
-                        <h2 class="cursive-font animate-box">Hà Nội xưa là nơi mà bạn có thể tìm về thế giới cổ tích xa xưa hay những cuốn truyện của nhà xuất bản Kim Đồng – Nhà xuất bản Mĩ Thuật .Tất cả những cuốn sách được trang trí đẹp mắt, nội dung hấp dẫn được rất nhiều bạn yêu thích.Những cuốn sách trên được sắp xếp dưới mô hình ngôi nhà. Một ngôi nhà tri thức mà tất cả chúng ta cùng vào trong để khám phá ...
-                        </h2>
+                        <p class="cursive-font animate-box" style="color: white">Hà Nội xưa là nơi mà bạn có thể tìm về thế giới cổ tích xa xưa hay những cuốn truyện của nhà xuất bản Kim Đồng – Nhà xuất bản Mĩ Thuật .Tất cả những cuốn sách được trang trí đẹp mắt, nội dung hấp dẫn được rất nhiều bạn yêu thích.Những cuốn sách trên được sắp xếp dưới mô hình ngôi nhà. Một ngôi nhà tri thức mà tất cả chúng ta cùng vào trong để khám phá ...
+                        </p>
+                        <p>
+                            <br>
+                            <a href="#" class="btn btn-primary btn-lg btn-hardbound animate-box">Tìm hiểu thêm </a> <span class="fh5co-block">
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
@@ -95,7 +99,10 @@
 
     <div id="main">
         <div class="container">
-            <div class="row row-pb-md">
+            <div class="col-md-12 text-center animate-box" style="margin-bottom: 5em;">
+                <h1>CÁC ĐẦU SÁCH NỔI BẬT</h1>
+            </div>
+            <!-- <div class="row row-pb-md">
                 <div class="col-md-4">
                     <div class="review text-center">
                         <figure>
@@ -152,51 +159,55 @@
                         </blockquote>
                     </div>
                 </div>
-            </div>
-            <div class="row fh5co-feature">
+            </div> -->
+            <!-- Thần đồng đất việt -->
+            <div class="row fh5co-feature" style="display: flex;">
                 <div class="col-md-6 col-md-push-6">
                     <div class="fh5co-copy">
-                        <div class="fh5co-copy-inner" style="vertical-align: top;">
-                            <h2>Không gia đình (Hector Malot)</h2>
-                            <p>Không Gia Đình là tiểu thuyết nổi tiếng nhất trong sự nghiệp văn chương của Hector Malot.
-                                Hơn một trăm năm nay, tác phẩm giành giải thưởng của Viện Hàn Lâm Văn học Pháp này đã
-                                trở thành người bạn thân thiết của thiếu nhi và tất cả những người yêu mến trẻ khắp thế
-                                giới.
-                                Tác phẩm đã ca ngợi sự lao động bền bỉ, tinh thần tự lập, chịu đựng gian khó, khích lệ
-                                tình
-                                bạn chân chính. Ca ngợi lòng nhân ái, tình yêu cuộc sống, ý chí vươn lên không ngừng…
-                                Không Gia Đình vì thế đã vượt qua biên giới nước Pháp và tồn tại lâu dài với thời gian.
+                        <div class="fh5co-copy-inner animate-box" style="vertical-align: top;">
+                            <h2>Thần đồng đất Việt (Lê Linh)</h2>
+                            <p>Thần đồng Đất Việt là một bộ truyện tranh thiếu nhi Việt Nam do họa sĩ Lê Linh sáng tác và phát hành bởi công ty Phan Thị 
+                                cùng với sự phối hợp của nhà xuất bản Trẻ.
+                                Bộ truyện diễn tả lại cuộc sống và những nét văn hoá của người Việt dưới thời phong kiến.
+                                <br>
+                                Các tác phẩm Việt ít ỏi hầu như không thể cạnh tranh được với cơn bão truyện nhập khẩu, nhưng câu chuyện về Tí, Sửu, Dần, Mẹo vẫn là niềm tự hào của truyện tranh Việt. 
+                                Có được thành tựu đó, do bộ truyện đạt được những giá trị riêng.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-md-pull-6">
                     <div class="fh5co-img text-right">
-                        <figure class="fh5co-figure animate-box">
-                            <img class="img-2" src="images/anh3.jpg" alt="Dế mèn phiêu lưu ký">
+                        <figure class="fh5co-figure image-hover  animate-box" style="position: relative;display: flex;">
+                            <img class="image1 fadeInUp image-hover" src="images/thandongdatviet1.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 fadeInUp image-hover" src="images/thandongdatviet2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 fadeInUp image-hover" src="images/thandongdatviet3.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
             </div>
-            <div class="row fh5co-feature fh5co-reverse">
+            <!-- Tí quậy -->
+            <div class="row fh5co-feature fh5co-reverse" style="display: flex;">
                 <div class="col-md-6">
                     <div class="fh5co-copy">
-                        <div class="fh5co-copy-inner">
-                            <h2>Thám tử lừng danh Conan</h2>
-                            <p>Là một bộ manga Nhật Bản dành cho lứa tuổi thiếu niên thuộc thể loại trinh thám được vẽ
-                                và minh họa bởi Aoyama Gosho.
-                            <p>Tác phẩm xoay quanh câu chuyện về chàng thám tử trung học Kudo Shinichi trong một lần
-                                đang điều tra đã bị Tổ chức Áo Đen ép uống thuốc độc,
-                                khiến cho cơ thể của cậu bị teo nhỏ và phải sống dưới thân phận là cậu bé Edogawa Conan.
-                            </p>
+                        <div class="fh5co-copy-inner animate-box">
+                            <h2>Tý Quậy (Đào Hải)</h2>
+                            <p>Tý Quậy là một bộ truyện tranh Việt Nam của họa sĩ Đào Hải do nhà xuất bản Kim Đồng ấn hành từ năm 2003, 
+                                được xem là một trong những bộ truyện tranh nội địa nổi tiếng nhất.
+                                <br>
+                                Bộ truyện xoay quanh cuộc sống hằng ngày của hai nhân vật Tý và Tèo, từ chuyện học hành đến những trò quậy phá. 
+                                Tý là một cậu bé thông minh nhưng tinh nghịch, có một người bạn thân tên Tèo sống ở lầu dưới. 
+                                Cả hai thường xuyên bày trò tinh quái để nghịch ngợm, trốn học, tránh việc bị thầy giáo và cha mẹ la mắng.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="fh5co-img text-left">
-                        <figure class="fh5co-figure animate-box">
-                            <img class="img-2" src="images/conan.gif" alt="Gif 1" width="500px">
+                        <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
+                            <img class="image1 fadeInUp " src="images/tyquay1.png" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 fadeInUp " src="images/tyquay2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 fadeInUp " src="images/tyquay4.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -204,22 +215,24 @@
             <div class="row fh5co-feature last-feature">
                 <div class="col-md-6 col-md-push-6">
                     <div class="fh5co-copy">
-                        <div class="fh5co-copy-inner" style="vertical-align: top;">
-                            <h2>Cuộc phiêu lưu của Alice vào Xứ Sở Thần Tiên</h2>
-                            <p> Là cuốn tiểu thuyết dành cho thiếu nhi của tác giả người Anh Charles Lutwidge Dodgson
-                                dưới bút danh Lewis Carroll viết năm 1865.
-                            <p> Câu chuyện kể về cô bé Alice chui qua một hang thỏ rồi lạc vào thế giới thần tiên có
-                                những sinh vật kì lạ.</p>
-                            <p>Cuốn sách thường được biết đến ở Việt Nam nhan đề Alice ở Xứ Sở Thần Tiên, Alice lạc vào
-                                Xứ Sở Diệu Kỳ hoặc Alice ở Xứ Sở Diệu Kỳ, nhan đề phổ biến trên các sân khấu, phim ảnh
-                                và truyền hình nhiều năm qua.</p>
+                        <div class="fh5co-copy-inner animate-box" style="vertical-align: top;">
+                            <h2>Nhật ký chú bé nhút nhát (Jeff Kinney)</h2>
+                            <p> Nhật ký chú bé nhút nhát (tiếng Anh: Diary of a Wimpy Kid) là một series tiểu thuyết của tác giả Jeff Kinney,
+                                 được nhen nhóm ý tưởng vào năm 1998 và sau đó 6 năm phiên bản đầu tiên đã được ra đời. Nội dung chủ yếu 
+                                 kể về cuộc sống xoay quanh cậu bé nhân vật chính Greg Heffley cùng những cảm xúc của cậu.
+                                 <br>
+                                  Hiện tại cuốn sách đã xuất bản được 17 tập tại Việt Nam, bao gồm 15 cuốn chính dưới góc nhìn của Greg Heffley và 2 cuốn Nhật ký cậu bé siêu thân thiện viết dưới góc nhìn của Rowley Jefferson.
+
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-md-pull-6">
                     <div class="fh5co-img text-right">
-                        <figure class="fh5co-figure animate-box">
-                            <img class="img-2" src="images/anh8.jpg" alt="Free Website Template by FreeHTML5.co">
+                        <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
+                            <img class="image1 fadeInUp " src="images/chubenhutnhat1.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 fadeInUp " src="images/chubenhutnhat2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 fadeInUp " src="images/chubenhutnhat3.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -227,26 +240,22 @@
             <div class="row fh5co-feature fh5co-reverse">
                 <div class="col-md-6">
                     <div class="fh5co-copy">
-                        <div class="fh5co-copy-inner">
-                            <h2>Truyện cổ tích Việt Nam</h2>
-                            <p>Quen thuộc, mộc mạc, gần gũi, đầy phép nhiệm màu và hấp dẫn tuổi thơ là những chuyện kể
-                                ngày xửa ngày xưa… Bước vào thế giới cổ tích lung linh kì ảo ấy, bạn sẽ được gặp những
-                                ông Bụt, bà tiên, vị thần, công chúa, hoàng tử, cô Tấm, chàng Trương Chi, nàng Tô Thị,
-                                Thạch Sanh, Sọ Dừa, chú Cuội… Bạn cũng biết sự tích, tên gọi dòng sông, ngọn núi, loài
-                                cây, loại quả… và nhiều điều thú vị khác nữa. Những câu chuyện về tình yêu thương từ bao
-                                đời nay vẫn sẽ được kể lại.
-                            <p>Bộ sách này tập hợp hơn 100 truyện cổ dân gian hay nhất và giàu ý nghĩa đã gắn bó với
-                                nhiều thế hệ độc giả. Tuyển tập “Truyện cổ tích Việt Nam” hay nhất đã trở lại với diện
-                                mạo mới với phần minh họa bìa tuyệt đẹp và đậm chất dân gian truyền thống của họa sĩ Tạ
-                                Huy Long.</p>
+                        <div class="fh5co-copy-inner animate-box">
+                            <h2>Không gia đinh (Hector Malot)</h2>
+                            <p>Không gia đình (tiếng Pháp: Sans famille), còn được dịch là Vô gia đình, có thể được xem là tiểu thuyết nổi tiếng nhất của nhà văn Pháp Hector Malot, 
+                                được xuất bản năm 1878. Tác phẩm đã được giải thưởng của Viện Hàn lâm Văn học Pháp. 
+                                Nhiều nước trên thế giới đã dịch lại tác phẩm và xuất bản nhiều lần.
+                                Từ một trăm năm nay, Không gia đình đã trở thành quen thuộc đối với thiếu nhi Pháp và thế giới. 
+                                Kiệt tác này đã được xuất hiện nhiều lần trên phim ảnh và truyền hình.</p>
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="fh5co-img text-left">
-                        <figure class="fh5co-figure animate-box">
-                            <img class="img-2" src="images/anh9.jpg" alt="Andecxen" width="500px">
+                        <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
+                            <img class="image1 fadeInUp " src="images/khonggiadinh.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 fadeInUp " src="images/khonggiadinh2.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
