--- a/book.html
+++ b/book.html
@@ -98,10 +98,10 @@
         </div>
     </header>
 
-    <div id="main" >
+    <div id="main" style="margin-top: 0;padding-top : 50px;background-image: url(images/mainpic.jpg);" >
         <div class="container">
-            <div class="col-md-12 text-center animate-box" style="margin-bottom: 5em;">
-                <h1>CÁC ĐẦU SÁCH NỔI BẬT</h1>
+            <div class="col-md-12 text-center animate-box" style="margin-bottom: 5em; ">
+                <h1 style="font-weight: bold;" >CÁC ĐẦU SÁCH NỔI BẬT</h1>
             </div>
 
             <!-- Thần đồng đất việt -->
@@ -109,13 +109,19 @@
                 <div class="col-md-6 col-md-push-6">
                     <div class="fh5co-copy">
                         <div class="fh5co-copy-inner animate-box" style="vertical-align: top;">
-                            <h2>Thần đồng đất Việt (Lê Linh)</h2>
-                            <p>Thần đồng Đất Việt là một bộ truyện tranh thiếu nhi Việt Nam do họa sĩ Lê Linh sáng tác và phát hành bởi công ty Phan Thị 
+                            <h2 style="font-weight: bold;">Thần đồng đất Việt (Lê Linh)</h2>
+                            <p style="font-weight: bold;
+                            text-shadow: 0 0 black;">Thần đồng Đất Việt là một bộ truyện tranh thiếu nhi Việt Nam do họa sĩ Lê Linh sáng tác và phát hành bởi công ty Phan Thị 
                                 cùng với sự phối hợp của nhà xuất bản Trẻ.
                                 Bộ truyện diễn tả lại cuộc sống và những nét văn hoá của người Việt dưới thời phong kiến.
                                 <br>
                                 Các tác phẩm Việt ít ỏi hầu như không thể cạnh tranh được với cơn bão truyện nhập khẩu, nhưng câu chuyện về Tí, Sửu, Dần, Mẹo vẫn là niềm tự hào của truyện tranh Việt. 
                                 Có được thành tựu đó, do bộ truyện đạt được những giá trị riêng.
+                                <p>
+                                    <br>
+                                    <a class="btn btn-primary btn-lg btn-hardbound animate-box" style="background-color: black; border: none;">Xem ngay: <span
+                                        class="price">18.000đ</span></a> <span  class="fh5co-block">
+                                </p>
                             </p>
                         </div>
                     </div>
@@ -135,13 +141,19 @@
                 <div class="col-md-6">
                     <div class="fh5co-copy">
                         <div class="fh5co-copy-inner animate-box">
-                            <h2>Tý Quậy (Đào Hải)</h2>
-                            <p>Tý Quậy là một bộ truyện tranh Việt Nam của họa sĩ Đào Hải do nhà xuất bản Kim Đồng ấn hành từ năm 2003, 
+                            <h2 style="font-weight: bold;">Tý Quậy (Đào Hải)</h2>
+                            <p style="font-weight: bold;
+                            text-shadow: 0 0 black;">Tý Quậy là một bộ truyện tranh Việt Nam của họa sĩ Đào Hải do nhà xuất bản Kim Đồng ấn hành từ năm 2003, 
                                 được xem là một trong những bộ truyện tranh nội địa nổi tiếng nhất.
                                 <br>
                                 Bộ truyện xoay quanh cuộc sống hằng ngày của hai nhân vật Tý và Tèo, từ chuyện học hành đến những trò quậy phá. 
                                 Tý là một cậu bé thông minh nhưng tinh nghịch, có một người bạn thân tên Tèo sống ở lầu dưới. 
                                 Cả hai thường xuyên bày trò tinh quái để nghịch ngợm, trốn học, tránh việc bị thầy giáo và cha mẹ la mắng.
+                                <p>
+                                    <br>
+                                    <a class="btn btn-primary btn-lg btn-hardbound animate-box" style="background-color: black; border: none;">Xem ngay: <span
+                                        class="price">25.000đ</span></a> <span  class="fh5co-block">
+                                </p>
                             </p>
                         </div>
                     </div>
@@ -161,13 +173,18 @@
                 <div class="col-md-6 col-md-push-6">
                     <div class="fh5co-copy">
                         <div class="fh5co-copy-inner animate-box" style="vertical-align: top;">
-                            <h2>Nhật ký chú bé nhút nhát (Jeff Kinney)</h2>
-                            <p> Nhật ký chú bé nhút nhát (tiếng Anh: Diary of a Wimpy Kid) là một series tiểu thuyết của tác giả Jeff Kinney,
+                            <h2 style="font-weight: bold;">Nhật ký chú bé nhút nhát (Jeff Kinney)</h2>
+                            <p style="font-weight: bold;
+                            text-shadow: 0 0 black;"> Nhật ký chú bé nhút nhát (tiếng Anh: Diary of a Wimpy Kid) là một series tiểu thuyết của tác giả Jeff Kinney,
                                  được nhen nhóm ý tưởng vào năm 1998 và sau đó 6 năm phiên bản đầu tiên đã được ra đời. Nội dung chủ yếu 
                                  kể về cuộc sống xoay quanh cậu bé nhân vật chính Greg Heffley cùng những cảm xúc của cậu.
                                  <br>
                                   Hiện tại cuốn sách đã xuất bản được 17 tập tại Việt Nam, bao gồm 15 cuốn chính dưới góc nhìn của Greg Heffley và 2 cuốn Nhật ký cậu bé siêu thân thiện viết dưới góc nhìn của Rowley Jefferson.
-
+                                  <p>
+                                    <br>
+                                    <a class="btn btn-primary btn-lg btn-hardbound animate-box" style="background-color: black; border: none;">Xem ngay: <span
+                                        class="price">50.000đ</span> </a> <span  class="fh5co-block">
+                                </p>
                             </p>
                         </div>
                     </div>
@@ -187,12 +204,18 @@
                 <div class="col-md-6">
                     <div class="fh5co-copy">
                         <div class="fh5co-copy-inner animate-box">
-                            <h2>Không gia đinh (Hector Malot)</h2>
-                            <p>Không gia đình (tiếng Pháp: Sans famille), còn được dịch là Vô gia đình, có thể được xem là tiểu thuyết nổi tiếng nhất của nhà văn Pháp Hector Malot, 
+                            <h2 style="font-weight: bold;">Không gia đinh (Hector Malot)</h2>
+                            <p style="font-weight: bold;
+                            text-shadow: 0 0 black;">Không gia đình (tiếng Pháp: Sans famille), còn được dịch là Vô gia đình, có thể được xem là tiểu thuyết nổi tiếng nhất của nhà văn Pháp Hector Malot, 
                                 được xuất bản năm 1878. Tác phẩm đã được giải thưởng của Viện Hàn lâm Văn học Pháp. 
                                 Nhiều nước trên thế giới đã dịch lại tác phẩm và xuất bản nhiều lần.
                                 Từ một trăm năm nay, Không gia đình đã trở thành quen thuộc đối với thiếu nhi Pháp và thế giới. 
                                 Kiệt tác này đã được xuất hiện nhiều lần trên phim ảnh và truyền hình.</p>
+                                <p>
+                                    <br>
+                                    <a class="btn btn-primary btn-lg btn-hardbound animate-box" style="background-color: black; border: none;">Xem ngay: <span
+                                        class="price">70.000đ</span> </a> <span  class="fh5co-block">
+                                </p>
                             </p>
                         </div>
                     </div>
@@ -212,8 +235,9 @@
                 <div class="col-md-6 col-md-push-6">
                     <div class="fh5co-copy">
                         <div class="fh5co-copy-inner animate-box" style="vertical-align: top;">
-                            <h2>Những tấm lòng cao cả (Edomondo De Amicis)</h2>
-                            <p> Đây thực sự là cuốn sách không thể thiếu trên giá sách của trẻ. 
+                            <h2 style="font-weight: bold;">Những tấm lòng cao cả (Edomondo De Amicis)</h2>
+                            <p style="font-weight: bold;
+                            text-shadow: 0 0 black;"> Đây thực sự là cuốn sách không thể thiếu trên giá sách của trẻ. 
                                 Tiểu thuyết được xuất bản lần đầu tiên vào ngày 18 tháng 10 năm 1886, 
                                 "Những tấm lòng cao cả" đã đưa tên tuổi của nhà văn Edomondo De Amicis vươn xa hơn nữa, 
                                 tuy đã ra đời từ lâu nhưng vẫn để lại dấu ấn không thể phai mờ trong lòng độc giả - nhất là các bạn thiếu nhi.
@@ -224,7 +248,11 @@
                                 được thấy và có khi cậu là nhân vật chính vào cuốn nhật kí mà cậu bắt đầu viết từ năm lớp ba. 
                                 Mỗi câu chuyện ý nghĩa về tình thầy trò, tình cảm gia đình, bạn bè là một bài học bổ ích cho trẻ, dạy trẻ cách làm người, 
                                 cách đối nhân xử thế trong xã hội.
-
+                                <p>
+                                    <br>
+                                    <a class="btn btn-primary btn-lg btn-hardbound animate-box" style="background-color: black; border: none;">Xem ngay: <span
+                                        class="price">50.000đ</span></a> <span  class="fh5co-block">
+                                </p>
                             </p>
                         </div>
                     </div>
