--- a/book.html
+++ b/book.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col-md-9 col-ms-9 text-left animate-box" style="margin-top: 20px">
                         <!-- <h1 id="fh5co-logo" class="cursive-font text-outline"><a href="book.html" >Hàng Sách Hà Nội Xưa</a></h1> -->
-                        <div class="row header-text animate-box " style="color: rgb(250, 250, 255); font-weight:bold;">
+                        <div class="row header-text animate-box " style="color: rgb(250, 250, 255); font-weight:bold; text-align: end;">
                             <div class="col-md-4 col-sm-6 header-text text-outline" href="#" style="cursor: pointer">TRANG CHỦ</div>
                             <div class="col-md-4 col-sm-6 header-text text-outline" onclick="scrollToBook()" style="cursor: pointer">NỔI BẬT</div>
                             <div class="col-md-4 col-sm-6 header-text text-outline" onclick="scrollToBottom()" style="cursor: pointer">LIÊN HỆ</div>
