modify video link

--- a/book.html
+++ b/book.html
@@ -73,7 +73,7 @@
                             <div class="mySlides " style="display: flex; height: 300px;justify-content: space-around;">
                                     <div class="video-player animate-box" style="display: flex;width: 569px;">
                                         <video
-                                        src="media/My Movie_1.mp4"
+                                        src="media/videodemo.mp4"
                                         class="video"
                                         ></video>
                                 
