--- a/book.html
+++ b/book.html
@@ -72,7 +72,7 @@
                             <!-- Full-width images with number and caption text -->
                             <div class="mySlides " style="display: flex; height: 300px;justify-content: space-around;">
                                     <div class="video-player animate-box" style="display: flex;width: 569px;">
-                                        <video autoplay muted playsinline loop controls
+                                        <video autoplay muted playsinline controls
                                             src="media/videodemo.mp4"
                                             class="video"
                                             id="video"
