modify user icon and change some text

--- a/book.html
+++ b/book.html
@@ -314,9 +314,9 @@
                     <div class="item">
                         <div class="testimony-slide active text-center">
                             <figure>
-                                <img src="images/usericon.png" alt="user">
+                                <img src="images/usericon3.png" alt="user">
                             </figure>
-                            <span>Xuân Bách</span>
+                            <span>Nguyễn Xuân Bách</span>
 
                             <blockquote>
                                 <p>"Quá tuyệt vời ! nội dung rất ý nghĩa và sâu sắc "</p>
@@ -326,21 +326,21 @@
                     <div class="item">
                         <div class="testimony-slide active text-center">
                             <figure>
-                                <img src="images/usericon.png" alt="user">
+                                <img src="images/usericon2.png" alt="user">
                             </figure>
-                            <span>Xuân Bách clone 1</span>
+                            <span>Hoàng Linh Lan</span>
   
                             <blockquote>
-                                <p>"Mình hay đọc bộ nhật ký chú bé nhút nhát và nó rất hay XD"</p>
+                                <p>"Mình hay đọc bộ nhật ký chú bé nhút nhát và nó rất hay !!"</p>
                             </blockquote>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testimony-slide active text-center">
                             <figure>
-                                <img src="images/usericon.png" alt="user">
+                                <img src="images/usericon3.png" alt="user">
                             </figure>
-                            <span>Xuân Bách clone 2</span>
+                            <span>Nguyễn Văn Tùng</span>
 
                             <blockquote>
                                 <p>"Sách mới , nội dung hay và ý nghĩa , đưa đc đến cho người đọc nhiều thông điệp "</p>
