--- a/book.html
+++ b/book.html
@@ -165,9 +165,9 @@
                 <div class="col-md-6 col-md-pull-6">
                     <div class="fh5co-img text-right">
                         <figure class="fh5co-figure image-hover  animate-box" style="position: relative;display: flex;">
-                            <img class="image1 fadeInUp image-hover" src="images/nguoicongaixomcung.jpg" style="height: 400px;" alt="ảnh không tồn tại">
-                            <img class="image2 fadeInUp image-hover" src="images/chieuchieu.jpg" style="height:400px;" alt="ảnh không tồn tại">
-                            <img class="image3 fadeInUp image-hover" src="images/demen.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img id="demen1" class="image1 animate-box image-hover " src="images/nguoicongaixomcung.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 animate-box image-hover" src="images/chieuchieu.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 animate-box image-hover" src="images/demen.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -197,9 +197,9 @@
                 <div class="col-md-6">
                     <div class="fh5co-img text-left">
                         <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
-                            <img class="image1 fadeInUp image-hover" src="images/cotich.jpg" style="height: 400px;" alt="ảnh không tồn tại">
-                            <img class="image2 fadeInUp image-hover" src="images/cotich1.jpg" style="height:400px;" alt="ảnh không tồn tại">
-                            <img class="image3 fadeInUp image-hover" src="images/cotich2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image1 animate-box image-hover" src="images/cotich.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 animate-box image-hover" src="images/cotich1.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 animate-box image-hover" src="images/cotich2.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -227,9 +227,9 @@
                 <div class="col-md-6 col-md-pull-6">
                     <div class="fh5co-img text-right">
                         <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
-                            <img class="image1 fadeInUp image-hover" src="images/matbiec.jpg" style="height: 400px;" alt="ảnh không tồn tại">
-                            <img class="image2 fadeInUp image-hover" src="images/hoavangtrencoxanh.jpg" style="height:400px;" alt="ảnh không tồn tại">
-                            <img class="image3 fadeInUp image-hover" src="images/vevetuoitho.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image1 animate-box image-hover" src="images/matbiec.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 animate-box image-hover" src="images/hoavangtrencoxanh.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image3 animate-box image-hover" src="images/vevetuoitho.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -258,8 +258,8 @@
                 <div class="col-md-6">
                     <div class="fh5co-img text-left">
                         <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
-                            <img class="image1 fadeInUp image-hover" src="images/khonggiadinh.jpg" style="height: 400px;" alt="ảnh không tồn tại">
-                            <img class="image2 fadeInUp image-hover" src="images/khonggiadinh2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image1 animate-box image-hover" src="images/khonggiadinh.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 animate-box image-hover" src="images/khonggiadinh2.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -295,8 +295,8 @@
                 <div class="col-md-6 col-md-pull-6">
                     <div class="fh5co-img text-right">
                         <figure class="fh5co-figure image-hover animate-box" style="position: relative;display: flex;">
-                            <img class="image1 fadeInUp image-hover" src="images/nhungtamlongcaoca1.jpg" style="height: 400px;" alt="ảnh không tồn tại">
-                            <img class="image2 fadeInUp image-hover" src="images/nhungtamlongcaoca2.jpg" style="height:400px;" alt="ảnh không tồn tại">
+                            <img class="image1 animate-box image-hover" src="images/nhungtamlongcaoca1.jpg" style="height: 400px;" alt="ảnh không tồn tại">
+                            <img class="image2 animate-box image-hover" src="images/nhungtamlongcaoca2.jpg" style="height:400px;" alt="ảnh không tồn tại">
                         </figure>
                     </div>
                 </div>
@@ -356,13 +356,13 @@
                 <h2 class="custom-font" style="color: #501c1c;">Một số loại sách khác </h2>
             </div>
             <figure class="fh5co-figure image-hover text-center animate-box" style="position: relative;display: flex;justify-content: space-around;">
-                <img class=" fadeInUp image-hover " src="images/alice.jpg" style="height: 200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/cavoi.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/ngoisao.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/khuvuonbimat.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/charlotte.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/cotich.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
-                <img class=" fadeInUp image-hover" src="images/hoangtube.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover " src="images/alice.jpg" style="height: 200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/cavoi.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/ngoisao.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/khuvuonbimat.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/charlotte.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/cotich.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
+                <img class=" animate-box image-hover" src="images/hoangtube.jpg" style="height:200px;box-shadow: 0 3px 10px rgb(0 0 0 / 3);" alt="ảnh không tồn tại">
             </figure>
             <!-- List Sach -->
             <div class="row animate-box">
